Sanitize instructions when tokenizing for fluent language